--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_install:
 before_script:
   - npm prune
 script:
-  - npm run test:single && npm run semantic-release
+  - npm run test:single
+  - npm run check-coverage
+  - npm run semantic-release
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
