--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "commit": "git-cz",
     "test": "mocha src/index.test.js -w",
-    "test:single": "mocha src/index.test.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "check-coverage" : "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "commitizen": "2.4.6",
     "cz-conventional-changelog": "1.1.5",
     "ghooks": "1.0.3",
+    "istanbul": "0.4.1",
     "mocha": "2.3.4",
     "semantic-release": "^4.3.5"
   },
@@ -41,7 +43,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test:single"
+      "pre-commit": "npm run test:single && npm run check-coverage"
     }
   }
 }
